--- a/abstracts/23_imgsynth_poster.html
+++ b/abstracts/23_imgsynth_poster.html
@@ -19,7 +19,7 @@
             </ul>
         	<div id="hero_text">
         		<h1>Reconstruction of 2D MRI using SynthSR and DL+DiReCT for Subcortical Shape Analysis in Epilepsy [POSTER]</h1>
-        		<h2>Ratcliffe, de Bézenac, Das, ... and Keller, 2031</h2>
+        		<h2>Ratcliffe, de Bézenac, Das, ... and Keller, 2023</h2>
             </div>
         </div>
         <div id="page_content">
@@ -39,20 +39,20 @@
             The 3D scans showed significant regional surface deflation (i.e. shape changes, regional atrophy; see figure 2) of the left accumbens, the right thalamus, and the caudate and putamen bilaterally in the individuals with IGE (males = 14, mean age = 32.16) when compared to the healthy controls (males = 16, mean age = 32.13). Analysis of the 2D scans failed to detect shape changes in any structure, whereas analysis of the synthesised images revealed significant shape changes, some of which were not found in the analysis of the 3D scans.
             </p>
             <img class="figure" src="../img/23_imgsynth_fig2.jpeg" alt="Figure 2. Results of FSL-randomise comparisons of subcortical shapes between 31 individuals with IGE and 39 healthy controls.">
-            <p class="captiontext"><strong>Figure 1.</strong> Sub-cortical shape was measured in 3D scans, 2D scans, DL+DiReCT-derived images, and SynthSR-derived images, and the shape changes are presented colour-coded to image type, post-threshold. 
+            <p class="captiontext"><strong>Figure 1.</strong> Subcortical shape was measured in 3D scans, 2D scans, DL+DiReCT-derived images, and SynthSR-derived images, and the shape changes are presented colour-coded to image type, post-threshold. 
             </p>
             <h3>Conclusions</h3>
         	<p>Images synthesised from 2D scans by DL+DiReCT and SynthSR led to the automatic identification of more IGE-related subcortical shape abnormalities than the unprocessed 2D scans, but also revealed additional abnormalities not detected in the 3D scans. Similarity measures between the 3D and 2D scans/synthesised images were low on average for the cortex, but were moderate in the subcortical structures. Synthesised images offer a potential workaround for the loss of resolution in 2D MRI scans, but quantitative analyses should be interpreted cautiously.
             </p>
             <h3>References</h3>
         	<ol>
-                <li>Whelan CD, Altmann A, Botía JA, et al. Structural brain abnormalities in the common epilepsies assessed in a worldwide ENIGMA study. Brain. 2018;141(2):391-408. doi:<a href="https://academic.oup.com/brain/article/141/2/391/4818311">10.1093/brain/awx341</a></li>
-                <li>Rebsamen M, Rummel C, Reyes M, Wiest R, McKinley R. Direct cortical thickness estimation using deep learning-based anatomy segmentation and cortex parcellation. Human Brain Mapping. 2020;41(17):4804-4814. doi:<a href="https://onlinelibrary.wiley.com/doi/full/10.1002/hbm.25159">10.1002/hbm.25159</a></li>
-                <li>Rebsamen M, McKinley R, Radojewski P, et al. Reliable brain morphometry from contrast-enhanced T1w-MRI in patients with multiple sclerosis. Human Brain Mapping. 2022;44(3):970-979. doi:<a href="https://onlinelibrary.wiley.com/doi/full/10.1002/hbm.26117">10.1002/hbm.26117</a></li>
-                <li>Iglesias JE, Billot B, Balbastre Y, et al. Joint super-resolution and synthesis of 1 mm isotropic MP-RAGE volumes from clinical MRI exams with scans of different orientation, resolution and contrast. NeuroImage. 2021;237:118206. doi:<a href="https://www.sciencedirect.com/science/article/pii/S1053811921004833?via%3Dihub">10.1016/j.neuroimage.2021.118206</a></li>
-                <li>Jenkinson M, Beckmann CF, Behrens TEJ, Woolrich MW, Smith SM. FSL. NeuroImage. 2012;62(2):782-790. doi:<a href="https://www.sciencedirect.com/science/article/pii/S1053811911010603">10.1016/j.neuroimage.2011.09.015</a></li>
-                <li>Fischl B. FreeSurfer. NeuroImage. 2012;62(2):774-781. doi:<a href="https://www.sciencedirect.com/science/article/pii/S1053811912000389?via%3Dihub">10.1016/j.neuroimage.2012.01.021</a></li>
-                <li>Yao AD, Cheng DL, Pan I, Kitamura F. Deep Learning in Neuroradiology: A Systematic Review of Current Algorithms and Approaches for the New Wave of Imaging Technology. Radiology: Artificial Intelligence. 2020;2(2):e190026. doi:<a href="https://pubs.rsna.org/doi/full/10.1148/ryai.2020190026">10.1148/ryai.2020190026</a></li>
+                <li>Whelan CD, Altmann A, Botía JA, et al. Structural brain abnormalities in the common epilepsies assessed in a worldwide ENIGMA study. <em>Brain</em> 2018;141(2):391-408. doi:<a href="https://academic.oup.com/brain/article/141/2/391/4818311">10.1093/brain/awx341</a></li>
+                <li>Rebsamen M, Rummel C, Reyes M, Wiest R, McKinley R. Direct cortical thickness estimation using deep learning-based anatomy segmentation and cortex parcellation. <em>Human Brain Mapping</em> 2020;41(17):4804-4814. doi:<a href="https://onlinelibrary.wiley.com/doi/full/10.1002/hbm.25159">10.1002/hbm.25159</a></li>
+                <li>Rebsamen M, McKinley R, Radojewski P, et al. Reliable brain morphometry from contrast-enhanced T1w-MRI in patients with multiple sclerosis. <em>Human Brain Mapping</em> 2022;44(3):970-979. doi:<a href="https://onlinelibrary.wiley.com/doi/full/10.1002/hbm.26117">10.1002/hbm.26117</a></li>
+                <li>Iglesias JE, Billot B, Balbastre Y, et al. Joint super-resolution and synthesis of 1 mm isotropic MP-RAGE volumes from clinical MRI exams with scans of different orientation, resolution and contrast. <em>NeuroImage</em> 2021;237:118206. doi:<a href="https://www.sciencedirect.com/science/article/pii/S1053811921004833?via%3Dihub">10.1016/j.neuroimage.2021.118206</a></li>
+                <li>Jenkinson M, Beckmann CF, Behrens TEJ, Woolrich MW, Smith SM. FSL. <em>NeuroImage</em> 2012;62(2):782-790. doi:<a href="https://www.sciencedirect.com/science/article/pii/S1053811911010603">10.1016/j.neuroimage.2011.09.015</a></li>
+                <li>Fischl B. FreeSurfer. <em>NeuroImage</em> 2012;62(2):774-781. doi:<a href="https://www.sciencedirect.com/science/article/pii/S1053811912000389?via%3Dihub">10.1016/j.neuroimage.2012.01.021</a></li>
+                <li>Yao AD, Cheng DL, Pan I, Kitamura F. Deep Learning in Neuroradiology: A Systematic Review of Current Algorithms and Approaches for the New Wave of Imaging Technology. <em>Radiology: Artificial Intelligence</em> 2020;2(2):e190026. doi:<a href="https://pubs.rsna.org/doi/full/10.1148/ryai.2020190026">10.1148/ryai.2020190026</a></li>
             </ol>
         </div>
         <footer>
