--- a/abstracts/23_NCC_review.html
+++ b/abstracts/23_NCC_review.html
@@ -18,7 +18,7 @@
                 <li><a class = "nav" href="../acknowledgements.html">Acknowledgements</a></li>
             </ul>
         	<div id="hero_text">
-        		<h1>Neurocystercosis-related Seizures: Imaging Biomarkers [PREPRINT]</h1>
+        		<h1>Neurocystercosis-related Seizures: Imaging Biomarkers</h1>
         		<h2>Ratcliffe, Adan, Marson, ... and Keller, 2023</h2>
             </div>
         </div>
