--- a/abstracts.html
+++ b/abstracts.html
@@ -25,16 +25,16 @@
         <div id="page_content">
             <h3>First author:</h3>
         	<ul>
-                <li><a href="abstracts/20_GGE_profiles.html">2020 - Cognitive Function in Genetic Generalized Epilepsies: Insights From Neuropsychology and Neuroimaging</a></li>
-                <li><a href="abstracts/21_shape_poster.html">2021 - Subcortical Shape Analysis in Patients with Neurocysticercosis Presenting with Seizures</a></li>
-                <li><a href="abstracts/22_prognosis_protocol.html">2022 - Clinical Prediction Models for Treatment Outcome in Newly-diagnosed Epilepsy: Protocol for a Systematic Review</a></li>
-                <li><a href="abstracts/23_NCC_review.html">2023 - Neurocysticercosis-related Seizures: Imaging Biomarkers</a></li>
-                <li><a href="abstracts/23_PoS_pres.html">2023 - Pint of Science: Why Can I Speak German Better After Two Pints?</a></li>
-                <li><a href="abstracts/23_imgsynth_poster.html">2023 - Reconstruction of 2D MRI using SynthSR and DL+DiReCT for Subcortical Shape Analysis in Epilepsy</a></li>
+                <li><a href="abstracts/20_proj_gge.html">2020 - Cognitive Function in Genetic Generalized Epilepsies: Insights From Neuropsychology and Neuroimaging</a></li>
+                <li><a href="abstracts/21_proj_shape.html">2021 - Subcortical Shape Analysis in Patients with Neurocysticercosis Presenting with Seizures</a></li>
+                <li><a href="abstracts/22_prot_outcomes.html">2022 - Clinical Prediction Models for Treatment Outcome in Newly-diagnosed Epilepsy: Protocol for a Systematic Review</a></li>
+                <li><a href="abstracts/23_proj_synth.html">2022 - Reconstruction of 2D MRI using SynthSR and DL+DiReCT for Subcortical Shape Analysis in Epilepsy</a></li>
+                <li><a href="abstracts/23_review_ncc.html">2023 - Neurocysticercosis-related Seizures: Imaging Biomarkers</a></li>
+                <li><a href="abstracts/23_mini_pos.html">2023 - Pint of Science: Why Can I Speak German Better After Two Pints?</a></li>
             </ul>
             <h3>Contributing author:</h3>
         	<ul>
-                <li><a href="22_JAE_profile.html">2022 - The Cognitive Phenotype of Juvenile Absence Epilepsy and its Heritability: An Investigation of Patients and Unaffected Siblings</a></li>
+                <li><a href="abstracts/23_proj_jae.html">2023 - The Cognitive Phenotype of Juvenile Absence Epilepsy and its Heritability: An Investigation of Patients and Unaffected Siblings</a></li>
             </ul>
         </div>
         <footer>
