--- a/abstracts/21_proj_shape.html
+++ b/abstracts/21_proj_shape.html
@@ -32,7 +32,7 @@
             <h3>Results</h3>
         	<p>Patients with NCC and recurrent seizures showed significant (corrected p < .05) inward surface deflation in localised regions of the right hippocampus compared to seizure-free NCC patients, when age and sex were modelled as nuisance regressors (Fig. 1). There was no significant or trend level differences in regional shape of the remaining structures between patients presenting with or without seizures.
             </p>
-            <img class="figure" src="../img/21_subcortical_shape_fig1.png" alt="Figure 1. Surface shape analysis results, showing significant inwards deflation of the right hippocampus in the seizure-recurrent group.">
+            <img class="figure" src="../img/21_proj_shape_fig1.png" alt="Figure 1. Surface shape analysis results, showing significant inwards deflation of the right hippocampus in the seizure-recurrent group.">
             <p class="captiontext"><strong>Figure 1.</strong> Significant inwards deflation of the right hippocampus in seizure-recurrent NCC patients, compared to seizure-free NCC patients. Areas in red represent vertices significantly deflated in the seizure-recurrent group, after multiple-comparisons correction. 
             </p>
             <h3>Conclusions</h3>
