--- a/cv.html
+++ b/cv.html
@@ -25,7 +25,7 @@
         <div id="page_content">
             <h3>About the author:</h3>
             <div class="row">
-                <img class="col" src="img/portrait_2023_2.JPG" alt="Photo of the author, Corey Ratcliffe, taken in 2023." style="max-width:20rem;max-height:20rem;min-width:20rem;min-height:20rem;">
+                <img class="col" src="img/23_portrait.jpg" alt="Photo of the author, Corey Ratcliffe, taken in 2023." style="max-width:20rem;max-height:20rem;min-width:20rem;min-height:20rem;">
                 <p class="col">Corey Ratcliffe is a PhD Student who is currently working towards developing network models of epileptogenesis in neurocysticercosis. Based at the University of Liverpool, collecting data at NIMHANS Bangalore.
                 </br>The intention for this site is threefold; for it to function as a professional-academic portfolio, a resource for those new to modern neuroscience practices and methods, and an introduction to me outside of academia, in the form of a book & music blog. To this end, please feel free to get in touch with me--via my contact address in the page footer--if you'd like any further information regarding my work or my interests. Cheers!
             </div>
