--- a/abstracts/23_proj_jae.html
+++ b/abstracts/23_proj_jae.html
@@ -18,7 +18,7 @@
                 <li><a class = "nav" href="../acknowledgements.html">Acknowledgements</a></li>
             </ul>
         	<div id="hero_text">
-        		<h1>The cognitive phenotype of juvenile absence epilepsy and its heritability: An investigation of patients and unaffected siblings [PREPRINT]</h1>
+        		<h1>The Cognitive Phenotype of Juvenile Absence Epilepsy and its Heritability: An Investigation of Patients and Unaffected Siblings</h1>
         		<h2>Caciagli, Ratcliffe, Xiao, ... and Wandschneider, 2022</h2>
             </div>
         </div>
