--- a/abstracts/22_proj_synth.html
+++ b/abstracts/22_proj_synth.html
@@ -18,7 +18,7 @@
                 <li><a class = "nav" href="../acknowledgements.html">Acknowledgements</a></li>
             </ul>
         	<div id="hero_text">
-        		<h1>Reconstruction of 2D MRI using SynthSR and DL+DiReCT for Subcortical Shape Analysis in Epilepsy [POSTER]</h1>
+        		<h1>Reconstruction of 2D MRI using SynthSR and DL+DiReCT for Subcortical Shape Analysis in Epilepsy</h1>
         		<h2>Ratcliffe, de Bézenac, Das, ... and Keller, 2023</h2>
             </div>
         </div>
