--- a/abstracts/22_proj_synth.html
+++ b/abstracts/22_proj_synth.html
@@ -19,7 +19,7 @@
             </ul>
         	<div id="hero_text">
         		<h1>Reconstruction of 2D MRI using SynthSR and DL+DiReCT for Subcortical Shape Analysis in Epilepsy</h1>
-        		<h2>Ratcliffe, de Bézenac, Das, ... and Keller, 2023</h2>
+        		<h2>Ratcliffe, de Bézenac, Das, Marson, and Keller, 2022</h2>
             </div>
         </div>
         <div id="page_content">
