--- a/abstracts.html
+++ b/abstracts.html
@@ -29,6 +29,7 @@
                 <li><a href="abstracts/21_proj_shape.html">2021 - Subcortical Shape Analysis in Patients with Neurocysticercosis Presenting with Seizures</a></li>
                 <li><a href="abstracts/22_prot_outcomes.html">2022 - Clinical Prediction Models for Treatment Outcome in Newly-diagnosed Epilepsy: Protocol for a Systematic Review</a></li>
                 <li><a href="abstracts/22_proj_synth.html">2022 - Reconstruction of 2D MRI using SynthSR and DL+DiReCT for Subcortical Shape Analysis in Epilepsy</a></li>
+                <li><a href="abstracts/23_proj_fba.html">2023 - Fixel-based Analysis of Diffusion MRI in Focal Epilepsy: refractory vs. non-refractory</a></li>
                 <li><a href="abstracts/23_review_ncc.html">2023 - Neurocysticercosis-related Seizures: Imaging Biomarkers</a></li>
                 <li><a href="abstracts/23_mini_pos.html">2023 - Pint of Science: Why Can I Speak German Better After Two Pints?</a></li>
             </ul>
