--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a class = "nav" href="acknowledgements.html">Acknowledgements</a></li>
             </ul>
         	<div id="hero_text">
-        		<h1>Neuroscience by Numbers: Theory through Practice</h1>
+        		<h1>Corey Ratcliffe, BSc, MRes</h1>
         		<h2>A combination blog, portfolio, and informative resource</h2>
             </div>
         </div>
@@ -35,8 +35,7 @@
         <footer>
             <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
             <br/>Contact:
-            <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a>
-            <a class="footer" rel="me" href="https://qoto.org/@c_ratcliffe">@c_ratcliffe@qoto.org</a></p>
+            <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
         </footer>
     </div>
 </body>
