--- a/books.html
+++ b/books.html
@@ -6,44 +6,44 @@
 <meta name="viewport" content="width=device-width, initial-scale=0.5">
 <html>
 <body>
-    <div id="page-container">
-        <div id="hero_image">
-            <ul class="nav">
-                <li><a class = "nav" href="index.html">Home</a></li>
-                <li><a class = "nav" href="abstracts.html">Abstracts</a></li>
-                <li><a class = "nav" href="books.html">Books</a></li>                
-                <li><a class = "nav" href="cv.html">C.V.</a></li>
-                <li><a class = "nav" href="music.html">Music</a></li>
-                <li><a class = "nav" href="software.html">Software</a></li>
-                <li><a class = "nav" href="acknowledgements.html">Acknowledgements</a></li>
-            </ul>
-        	<div id="hero_text">
-        		<h1>Book Recommendations</h1>
-        		<h2>Books and authors I've gotten something from in the past</h2>
-            </div>
-        </div>
-        <div id="page_content">
-            <p class="introtext">Recommendations are made purely based on my own subjective reading experience.  Audiobooks are included based on the content of the book, not the presentation.</p>
-            <h3>Audiobooks:</h3>
-        	<ul>
-                <li><a href="https://www.goodreads.com/series/40957-the-hitchhiker-s-guide-to-the-galaxy">Adams, D. - The Hitchhiker's Guide to the Galaxy [1 - 5]:</a> Occasionally philosophical, often contemplative, and consistently hilarious, this sci-fi series is full of imagination and British charm. The audiobooks are marvellously voiced, too.</li>
-            </ul>
-            <h3>Print:</h3>
-            <ul>
-                <li><a href="https://www.goodreads.com/book/show/1137702.The_Wendigo">Blackwood, A. - The Wendigo:</a> A classic American horror tale. Predating H.P. Lovecraft, Blackwood nevertheless create a cosmic sense of dread by exploring stark imagery in the vastness of nature.</li>
-                <li><a href="https://www.goodreads.com/book/show/55399.Gardens_of_the_Moon">Erikson, S. & Esselmont, I. - Malazan book of the Fallen:</a> </li>
-                <li><a href="https://www.goodreads.com/book/show/228665.The_Eye_of_the_World?from_search=true&from_srp=true&qid=a0KJ27JvrL&rank=1">Jordan, R. & Sanderson, B. - The Wheel of Time:</a> </li>
-                <li><a href="https://www.goodreads.com/book/show/153747.Moby_Dick_or_the_Whale?from_search=true&from_srp=true&qid=N4n5ad0b7f&rank=1">Melville, H. - Moby-Dick:</a> The classic epic of obsession and adventure. The only book I have ever (partially) read that I would recommend the abridged version of--the cetology chapters absolutely destroy any narrative cohesion. [INCOMPLETE READING]</li>
-                <li><a href="https://www.goodreads.com/book/show/5907.The_Hobbit_or_There_and_Back_Again?from_search=true&from_srp=true&qid=7MdosMoq7u&rank=1">Tolkein, J.R.R. - The Hobbit:</a> </li>
-                <li><a href="https://www.goodreads.com/book/show/33.The_Lord_of_the_Rings?from_search=true&from_srp=true&qid=qWUWwsdNOw&rank=2">Tolkein, J.R.R. - The Lord of the Rings:</a> </li>
-            </ul>
-        </div>
-        <footer>
-            <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
-            <br/>Contact:
-            <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
-        </footer>
+  <div id="page-container">
+    <div id="hero_image">
+      <ul class="nav">
+        <li><a class = "nav" href="index.html">Home</a></li>
+        <li><a class = "nav" href="abstracts.html">Abstracts</a></li>
+        <li><a class = "nav" href="books.html">Books</a></li>
+        <li><a class = "nav" href="cv.html">CV</a></li>
+        <li><a class = "nav" href="music.html">Music</a></li>
+        <li><a class = "nav" href="software.html">Software</a></li>
+        <li><a class = "nav" href="acknowledgements.html">Acknowledgements</a></li>
+      </ul>
+      <div id="hero_text">
+        <h1>Book Recommendations</h1>
+        <h2>Books and authors I've gotten something from in the past</h2>
+      </div>
     </div>
+    <div id="page_content">
+      <p class="introtext">Recommendations are made purely based on my own subjective reading experience.  Audiobooks are included based on the content of the book, not the presentation.</p>
+      <h3>Audiobooks:</h3>
+    	<ul>
+        <li><a href="https://www.goodreads.com/series/40957-the-hitchhiker-s-guide-to-the-galaxy">Adams, D. - The Hitchhiker's Guide to the Galaxy [1 - 5]:</a> Occasionally philosophical, often contemplative, and consistently hilarious, this sci-fi series is full of imagination and British charm. The audiobooks are marvellously voiced, too.</li>
+      </ul>
+      <h3>Print:</h3>
+      <ul>
+        <li><a href="https://www.goodreads.com/book/show/1137702.The_Wendigo">Blackwood, A. - The Wendigo:</a> A classic American horror tale. Predating H.P. Lovecraft, Blackwood nevertheless create a cosmic sense of dread by exploring stark imagery in the vastness of nature.</li>
+        <li><a href="https://www.goodreads.com/book/show/55399.Gardens_of_the_Moon">Erikson, S. & Esselmont, I. - Malazan book of the Fallen:</a> </li>
+        <li><a href="https://www.goodreads.com/book/show/228665.The_Eye_of_the_World?from_search=true&from_srp=true&qid=a0KJ27JvrL&rank=1">Jordan, R. & Sanderson, B. - The Wheel of Time:</a> </li>
+        <li><a href="https://www.goodreads.com/book/show/153747.Moby_Dick_or_the_Whale?from_search=true&from_srp=true&qid=N4n5ad0b7f&rank=1">Melville, H. - Moby-Dick:</a> The classic epic of obsession and adventure. The only book I have ever (partially) read that I would recommend the abridged version of--the cetology chapters absolutely destroy any narrative cohesion. [INCOMPLETE READING]</li>
+        <li><a href="https://www.goodreads.com/book/show/5907.The_Hobbit_or_There_and_Back_Again?from_search=true&from_srp=true&qid=7MdosMoq7u&rank=1">Tolkein, J.R.R. - The Hobbit:</a> </li>
+        <li><a href="https://www.goodreads.com/book/show/33.The_Lord_of_the_Rings?from_search=true&from_srp=true&qid=qWUWwsdNOw&rank=2">Tolkein, J.R.R. - The Lord of the Rings:</a> </li>
+      </ul>
+    </div>
+    <footer>
+      <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
+      <br/>Contact:
+      <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
+    </footer>
+  </div>
 </body>
 
 </html>
