--- a/acknowledgements.html
+++ b/acknowledgements.html
@@ -12,28 +12,28 @@
         <li><a class = "nav" href="index.html">Home</a></li>
         <li><a class = "nav" href="abstracts.html">Abstracts</a></li>
         <li><a class = "nav" href="books.html">Books</a></li>
-        <li><a class = "nav" href="cv.html">C.V.</a></li>
+        <li><a class = "nav" href="cv.html">CV</a></li>
         <li><a class = "nav" href="music.html">Music</a></li>
         <li><a class = "nav" href="software.html">Software</a></li>
         <li><a class = "nav" href="acknowledgements.html">Acknowledgements</a></li>
       </ul>
-  	<div id="hero_text">
-        		<h1>Acknowledgments</h1>
-        		<h2>Individuals who have contributed to this site, in one way or another</h2>
-            </div>
-        </div>
-        <div id="page_content">
-        	<h3>Media</h3>
-        	<ul>
-                <li>Header image: Used under the free Unsplash license, provided by <a href="https://unsplash.com/@averey?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Robina Weermeijer</a></li>
-            </ul>
-        </div>
-        <footer>
-            <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
-            <br/>Contact:
-            <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
-        </footer>
+      <div id="hero_text">
+        <h1>Acknowledgments</h1>
+        <h2>Individuals who have contributed to this site, in one way or another</h2>
+      </div>
     </div>
+      <div id="page_content">
+        <h3>Media</h3>
+        <ul>
+          <li>Header image: Used under the free Unsplash license, provided by <a href="https://unsplash.com/@averey?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Robina Weermeijer</a></li>
+        </ul>
+      </div>
+    <footer>
+      <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
+      <br/>Contact:
+      <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
+    </footer>
+  </div>
 </body>
 
 </html>
