--- a/index.html
+++ b/index.html
@@ -12,32 +12,32 @@
         <li><a class = "nav" href="index.html">Home</a></li>
         <li><a class = "nav" href="abstracts.html">Abstracts</a></li>
         <li><a class = "nav" href="books.html">Books</a></li>
-        <li><a class = "nav" href="cv.html">C.V.</a></li>
+        <li><a class = "nav" href="cv.html">CV</a></li>
         <li><a class = "nav" href="music.html">Music</a></li>
         <li><a class = "nav" href="software.html">Software</a></li>
         <li><a class = "nav" href="acknowledgements.html">Acknowledgements</a></li>
       </ul>
-  	<div id="hero_text">
-        		<h1>Corey Ratcliffe, BSc, MRes</h1>
-        		<h2>A combination blog, portfolio, and informative resource</h2>
-            </div>
-        </div>
-        <div id="page_content">            
-        	<h3>Site Contents:</h3>
-            <ul>
-                <li><a href="abstracts.html">Abstracts:</a> Links to abstracts and summaries of my affiliated projects</li>
-                <li><a href="books.html">Books:</a> Some recommendations for reading material; mostly fiction, including satire and fantasy</li>
-                <li><a href="cv.html">C.V.:</a> A professional summary of myself, also available as a pdf</li>
-                <li><a href="music.html">Music:</a> Some recommendations for listening material; mostly (but not exclusively!) metal</li>
-                <li><a href="software.html">Software:</a> A (hopefully) comprehensive collection of software that I use regularly, for myriad purposes</li>
-            </ul>
-        </div>
-        <footer>
-            <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
-            <br/>Contact:
-            <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
-        </footer>
+      <div id="hero_text">
+        <h1>Corey Ratcliffe, BSc, MRes</h1>
+        <h2>A combination blog, portfolio, and informative resource</h2>
+      </div>
     </div>
+      <div id="page_content">
+        <h3>Site Contents:</h3>
+        <ul>
+          <li><a href="abstracts.html">Abstracts:</a> Links to abstracts and summaries of my affiliated projects</li>
+          <li><a href="books.html">Books:</a> Some recommendations for reading material; mostly fiction, including satire and fantasy</li>
+          <li><a href="cv.html">CV:</a> A professional summary of myself, also available as a pdf</li>
+          <li><a href="music.html">Music:</a> Some recommendations for listening material; mostly (but not exclusively!) metal</li>
+          <li><a href="software.html">Software:</a> A (hopefully) comprehensive collection of software that I use regularly, for myriad purposes</li>
+        </ul>
+      </div>
+    <footer>
+      <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
+      <br/>Contact:
+      <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
+    </footer>
+  </div>
 </body>
 
 </html>
