--- a/music.html
+++ b/music.html
@@ -6,91 +6,91 @@
 <meta name="viewport" content="width=device-width, initial-scale=0.5">
 <html>
 <body>
-    <div id="page-container">
-        <div id="hero_image">
-            <ul class="nav">
-                <li><a class = "nav" href="index.html">Home</a></li>
-                <li><a class = "nav" href="abstracts.html">Abstracts</a></li>
-                <li><a class = "nav" href="books.html">Books</a></li>                
-                <li><a class = "nav" href="cv.html">C.V.</a></li>
-                <li><a class = "nav" href="music.html">Music</a></li>
-                <li><a class = "nav" href="software.html">Software</a></li>
-                <li><a class = "nav" href="acknowledgements.html">Acknowledgements</a></li>
-            </ul>
-        	<div id="hero_text">
-        		<h1>Music Recommendations</h1>
-        		<h2>Artists and projects I'd like others to know about</h2>
-            </div>
-        </div>
-        <div id="page_content">
-            <p class="introtext">Recommendations are made purely based on my own listening experience. Artists are grouped by genre umbrella, so there will undoubtedly be some level of subjectivity involved; unfortunately, I can't please everyone.</p>
-            <h3>Avante-garde Metal:</h3>
-        	<ul>
-                <li><a href="https://www.youtube.com/watch?v=UZzYxGZ7Hmc">Igorrr:</a> Alias and project of French musician, Gautier Serre, Igorrr is a ludicrous combination of baroque, EDM, and black metal. A personal favourite.</li>
-            </ul>
-            <h3>Black Metal:</h3>
-            <ul>
-                <li><a href="https://www.youtube.com/watch?v=JjNYmxdkd1w">Zeal and Ardor:</a> A Swiss six-piece, playing gospel and blues infused black metal.</li>
-            </ul>
-            <h3>Cabaret:</h3>
-        	<ul>
-                <li><a href="https://www.youtube.com/watch?v=hp-NRJ4JFdE">Voltaire:</a> Aurelio Voltaire is dark, camp, nerdy fun. Songs with subject matter from Star Trek to necrophilia attest that gothic does not mean dreary.</li>
-            </ul>
-            <h3>Death Metal:</h3>
-            <ul>
-                <li><a href="https://www.youtube.com/watch?v=5sV2zTMON6E">1914:</a> A Ukrainian five-piece, whose blackened-death metal is as heavy as the WWI themed lyrical focus.</li>
-            </ul>
-            <h3>Folk Metal:</h3>
-            <ul>
-                <li><a href="https://www.youtube.com/watch?v=x4SIK5u2Nfg">Amon Amarth:</a> One of the largest names in folk metal, Amon Amarth are a Swedish five-piece famous for their groovy, norse mythology themed take on death metal.</li>
-            </ul>
-            <h3>Grind and Noise:</h3>
-            <ul>
-                <li><a href="https://www.youtube.com/watch?v=OMYe7M26fZg">Anaal Nathrakh:</a> Legendary Birmingham (UK) two-piece grindcore outfit Anaal Nathrakh are the auditory equivalent of being hit by a bus.</li>
-            </ul>
-            <h3>Groove Metal:</h3>
-            <ul>
-                <li><a href="https://www.youtube.com/watch?v=KAaMDm3jxeE">DevilDriver:</a> The band that got me into groove metal, DevilDriver are one of the most fun bands of their kind. Who needs sophistication when you have pure cathartic energy?</li>
-            </ul>
-            <h3>Hard Rock:</h3>
-            <ul>
-                <li><a href="https://www.youtube.com/watch?v=xPlqLHcphyw">AC/DC:</a> There's little that hasn't been said about AC/DC over the years. Call it Dad-rock if you like, but whatever you call it, you can't deny it has magnetism and an addictive boyish energy.</li>
-                <li><a href="https://www.youtube.com/watch?v=VqoyKzgkqR4">Ghost:</a> Tobias Forge's hard rock project, Ghost, combine blues and doom with camp aesthetics to put out some of the catchiest rock hits ever written.</li>
-                <li><a href="https://www.youtube.com/watch?v=ojOKGrvXFUE">Motörhead:</a> No band embodies "hard rock 'n roll" better than Motörhead, and no frontman better than Lemmy Kilmister. Truly one of the all-time greats.</li>
-            </ul>
-            <h3>Industrial:</h3>
-            <ul>
-                <li><a href="https://www.youtube.com/watch?v=WXv31OmnKqQ">Rammstein:</a> Legendary neue Deutsche härte pioneers Rammstein are provocative, dramatic, and unsurpassed in the industrial scene.</li>
-            </ul>
-            <h3>Melodic Death Metal:</h3>
-            <ul>
-                <li><a href="https://www.youtube.com/watch?v=goVIhhH165k">In Flames:</a> One of the most well-known names in metal, this Gothenburg band are pioneers of the melodeath genre.</li>
-                <li><a href="https://www.youtube.com/watch?v=RIF-eXs-oxk">Orbit Culture:</a> Relative newcomers to melodeath, Orbit Culture combine deathcore aesthetics with some of the catchiest and heaviest melodeath around. A personal favourite.</li>
-            </ul>
-            <h3>Piano Rock and Acoustic Comedy:</h3>
-            <ul>
-                <li><a href="https://www.youtube.com/watch?v=IZeWPScnolo">Tim Minchin:</a> Marrying comedy and piano rock, Tim Minchin's music is a celebration of both, with a wit that stays on the accessible side of obnoxious.</li>
-                <li><a href="https://www.youtube.com/watch?v=jeWZhuzFMM8">Ben Folds:</a> Slice of life comedy with style and flair that only a very skilled pianist can weave into such light-hearted music.</li>
-            </ul>
-            <h3>Power Metal:</h3>
-            <ul>
-                <li><a href="https://www.youtube.com/watch?v=-AFdwoyNT24">Sabaton:</a> Sabaton are a Swedish five-piece who put out catchy (if somewhat cheesy) heavy metal that juxtaposes occasionally bleak historical themes with modern melodic metal trappings.</li>
-            </ul>
-            <h3>Rap and Hip-hop:</h3>
-            <ul>
-                <li><a href="https://www.youtube.com/watch?v=vWaljXUiCaE">Run the Jewels:</a> An incredible collaboration between EL-P and Killer Mike, RTJ are just incapable of writing a bad track. Hilarious, slick, and aggressive, this east-coast/southern hip-hop fusion is one not to miss. A personal favourite.</li>
-            </ul>
-            <h3>Rave and Hyperpop:</h3>
-            <ul>
-                <li><a href="https://www.youtube.com/watch?v=2uTMTyqQxl4">Little Big:</a> This tongue-in-cheek Russian project are responsible for some irresistably catchy rave tracks that celebrate slavic culture, whilst criticising the prevalence of systemic abuse.</li>
-            </ul>
-        </div>
-        <footer>
-            <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
-            <br/>Contact:
-            <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
-        </footer>
+  <div id="page-container">
+    <div id="hero_image">
+      <ul class="nav">
+        <li><a class = "nav" href="index.html">Home</a></li>
+        <li><a class = "nav" href="abstracts.html">Abstracts</a></li>
+        <li><a class = "nav" href="books.html">Books</a></li>
+        <li><a class = "nav" href="cv.html">CV</a></li>
+        <li><a class = "nav" href="music.html">Music</a></li>
+        <li><a class = "nav" href="software.html">Software</a></li>
+        <li><a class = "nav" href="acknowledgements.html">Acknowledgements</a></li>
+      </ul>
+      <div id="hero_text">
+        <h1>Music Recommendations</h1>
+        <h2>Artists and projects I'd like others to know about</h2>
+      </div>
     </div>
+    <div id="page_content">
+      <p class="introtext">Recommendations are made purely based on my own listening experience. Artists are grouped by genre umbrella, so there will undoubtedly be some level of subjectivity involved; unfortunately, I can't please everyone.</p>
+      <h3>Avante-garde Metal:</h3>
+      <ul>
+        <li><a href="https://www.youtube.com/watch?v=UZzYxGZ7Hmc">Igorrr:</a> Alias and project of French musician, Gautier Serre, Igorrr is a ludicrous combination of baroque, EDM, and black metal. A personal favourite.</li>
+      </ul>
+      <h3>Black Metal:</h3>
+      <ul>
+        <li><a href="https://www.youtube.com/watch?v=JjNYmxdkd1w">Zeal and Ardor:</a> A Swiss six-piece, playing gospel and blues infused black metal.</li>
+      </ul>
+      <h3>Cabaret:</h3>
+      <ul>
+        <li><a href="https://www.youtube.com/watch?v=hp-NRJ4JFdE">Voltaire:</a> Aurelio Voltaire is dark, camp, nerdy fun. Songs with subject matter from Star Trek to necrophilia attest that gothic does not mean dreary.</li>
+      </ul>
+      <h3>Death Metal:</h3>
+      <ul>
+        <li><a href="https://www.youtube.com/watch?v=5sV2zTMON6E">1914:</a> A Ukrainian five-piece, whose blackened-death metal is as heavy as the WWI themed lyrical focus.</li>
+      </ul>
+      <h3>Folk Metal:</h3>
+      <ul>
+        <li><a href="https://www.youtube.com/watch?v=x4SIK5u2Nfg">Amon Amarth:</a> One of the largest names in folk metal, Amon Amarth are a Swedish five-piece famous for their groovy, norse mythology themed take on death metal.</li>
+      </ul>
+      <h3>Grind and Noise:</h3>
+      <ul>
+        <li><a href="https://www.youtube.com/watch?v=OMYe7M26fZg">Anaal Nathrakh:</a> Legendary Birmingham (UK) two-piece grindcore outfit Anaal Nathrakh are the auditory equivalent of being hit by a bus.</li>
+      </ul>
+      <h3>Groove Metal:</h3>
+      <ul>
+        <li><a href="https://www.youtube.com/watch?v=KAaMDm3jxeE">DevilDriver:</a> The band that got me into groove metal, DevilDriver are one of the most fun bands of their kind. Who needs sophistication when you have pure cathartic energy?</li>
+      </ul>
+      <h3>Hard Rock:</h3>
+      <ul>
+        <li><a href="https://www.youtube.com/watch?v=xPlqLHcphyw">AC/DC:</a> There's little that hasn't been said about AC/DC over the years. Call it Dad-rock if you like, but whatever you call it, you can't deny it has magnetism and an addictive boyish energy.</li>
+        <li><a href="https://www.youtube.com/watch?v=VqoyKzgkqR4">Ghost:</a> Tobias Forge's hard rock project, Ghost, combine blues and doom with camp aesthetics to put out some of the catchiest rock hits ever written.</li>
+        <li><a href="https://www.youtube.com/watch?v=ojOKGrvXFUE">Motörhead:</a> No band embodies "hard rock 'n roll" better than Motörhead, and no frontman better than Lemmy Kilmister. Truly one of the all-time greats.</li>
+      </ul>
+      <h3>Industrial:</h3>
+      <ul>
+        <li><a href="https://www.youtube.com/watch?v=WXv31OmnKqQ">Rammstein:</a> Legendary neue Deutsche härte pioneers Rammstein are provocative, dramatic, and unsurpassed in the industrial scene.</li>
+      </ul>
+      <h3>Melodic Death Metal:</h3>
+      <ul>
+        <li><a href="https://www.youtube.com/watch?v=goVIhhH165k">In Flames:</a> One of the most well-known names in metal, this Gothenburg band are pioneers of the melodeath genre.</li>
+        <li><a href="https://www.youtube.com/watch?v=RIF-eXs-oxk">Orbit Culture:</a> Relative newcomers to melodeath, Orbit Culture combine deathcore aesthetics with some of the catchiest and heaviest melodeath around. A personal favourite.</li>
+      </ul>
+      <h3>Piano Rock and Acoustic Comedy:</h3>
+      <ul>
+        <li><a href="https://www.youtube.com/watch?v=IZeWPScnolo">Tim Minchin:</a> Marrying comedy and piano rock, Tim Minchin's music is a celebration of both, with a wit that stays on the accessible side of obnoxious.</li>
+        <li><a href="https://www.youtube.com/watch?v=jeWZhuzFMM8">Ben Folds:</a> Slice of life comedy with style and flair that only a very skilled pianist can weave into such light-hearted music.</li>
+      </ul>
+      <h3>Power Metal:</h3>
+      <ul>
+        <li><a href="https://www.youtube.com/watch?v=-AFdwoyNT24">Sabaton:</a> Sabaton are a Swedish five-piece who put out catchy (if somewhat cheesy) heavy metal that juxtaposes occasionally bleak historical themes with modern melodic metal trappings.</li>
+      </ul>
+      <h3>Rap and Hip-hop:</h3>
+      <ul>
+        <li><a href="https://www.youtube.com/watch?v=vWaljXUiCaE">Run the Jewels:</a> An incredible collaboration between EL-P and Killer Mike, RTJ are just incapable of writing a bad track. Hilarious, slick, and aggressive, this east-coast/southern hip-hop fusion is one not to miss. A personal favourite.</li>
+      </ul>
+      <h3>Rave and Hyperpop:</h3>
+      <ul>
+        <li><a href="https://www.youtube.com/watch?v=2uTMTyqQxl4">Little Big:</a> This tongue-in-cheek Russian project are responsible for some irresistably catchy rave tracks that celebrate slavic culture, whilst criticising the prevalence of systemic abuse.</li>
+      </ul>
+    </div>
+    <footer>
+      <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
+      <br/>Contact:
+      <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
+    </footer>
+  </div>
 </body>
 
 </html>
