--- a/software.html
+++ b/software.html
@@ -6,60 +6,60 @@
 <meta name="viewport" content="width=device-width, initial-scale=0.5">
 <html>
 <body>
-    <div id="page-container">
-        <div id="hero_image">
-            <ul class="nav">
-                <li><a class = "nav" href="index.html">Home</a></li>
-                <li><a class = "nav" href="abstracts.html">Abstracts</a></li>
-                <li><a class = "nav" href="books.html">Books</a></li>                
-                <li><a class = "nav" href="cv.html">C.V.</a></li>
-                <li><a class = "nav" href="music.html">Music</a></li>
-                <li><a class = "nav" href="software.html">Software</a></li>
-                <li><a class = "nav" href="acknowledgements.html">Acknowledgements</a></li>
-            </ul>
-        	<div id="hero_text">
-        		<h1>Software Recommendations</h1>
-        		<h2>Programmes, tools, and packages for myriad applications</h2>
-            </div>
-        </div>
-        <div id="page_content">
-            <p class="introtext">Efforts have been made to limit software to free and open-source options. Some paid for options are included when no better alternative exists (to my knowledge). Subscription models are excluded entirely.</p>
-        	<h3>Downloadable:</h3>
-            <ul>
-                <li><a href="https://atom.io">Atom Editor</a> - Highly modifiable text editor with full GitHub integration [Linux, Mac, Windows]</li>
-                <li><a href="https://www.audacityteam.org/">Audacity</a> - Multi-track audio editing, relatively powerful for its learning curve [Linux, Mac, Windows]</li>
-                <li><a href="https://brave.com">Brave Browser</a> - Chrome-based browser with a built-in adblocker and TOR browser [Linux, Mac, Windows]</li>
-                <li><a href="https://calibre-ebook.com">Calibre</a> - E-Book library manager, exporter, and reader [Linux, Mac, Windows]</li>
-                <li><a href="https://picotorrent.org/">Picotorrent</a> - Fast, safe, and minimal torrent client [Windows]</li>
-                <li><a href="https://equalizerapo.com/">Equalizer APO</a> - Open source audio processing software, functions as a systemwide EQ [Windows]</li>
-                <ul class="sub">
-                    <li><a href="https://sourceforge.net/projects/peace-equalizer-apo-extension/">Peace Equalizer</a> - Highly recommended interface for Equalizer APO
-                </ul>
-                <li><a href="https://evince.en.softonic.com/">Evince PDF Reader</a> - Lightweight, but powerful, document viewer [Linux]</li>
-                <li><a href="https://www.gimp.org/">GIMP</a> - Vector based image manipulation software, a Photoshop alternative [Linux, Mac, Windows]</li>
-                <li><a href="https://inkscape.org/">Inkscape</a> - Vector based graphics editor, an Illustrator alternative [Linux, Mac, Windows]</li>
-                <li><a href="https://krita.org/en/">Krita</a> - Feature-heavy painting and drawing program [Linux, Mac, Windows]</li>
-                <li><a href="https://www.getmusicbee.com/">Musicbee</a> - Highly customisable music library manager, exporter, and player [Windows]</li>
-                <ul class="sub">
-                    <li><a href="https://github.com/dsafa/audio-band">Audioband</a> - A taskbar-based audio controller for Spotify, iTunes, or MusicBee [Windows]</li>
-                </ul>
-                <li><a href="https://www.openshot.org/">OpenShot</a> - Powerful video editing software [Linux, Mac, Windows]</li>
-                <li><a href="https://www.scribus.net/">Scribus</a> - Desktop publishing software, an InDesign alternative [Linux, Mac, Windows]</li>
-                <li><a href="https://tiddlywiki.com/">Tiddlywiki</a> - A html based personal wikipedia tool, incredibly lightweight, and unsurpassed as a diary</li>
-                <ul class="sub">
-                    <li><a href="https://github.com/Jermolene/TiddlyDesktop">TiddlyDesktop</a> - A fusion web-browser/Javascript node built in NWJS, allowing Tiddlywiki to run as a native app [Linux, Mac, Windows]</li>
-                    <li><a href="https://andtidwiki.en.aptoide.com/app">AndTidWiki</a> - A standalone html viewing tool, optimised for TiddlyWiki [Android]</li>
-                </ul>
-                <li><a href="https://www.videolan.org/">VLC</a> - Powerful multimedia player [Linux, Mac, Windows]</li>
-                <li><a href="https://www.zotero.org/">Zotero</a> - Reference and journal library manager, capable of sharing libraries between devices [Linux, Mac, Windows]</li>
-            </ul>
-        </div>
-        <footer>
-            <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
-            <br/>Contact:
-            <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
-        </footer>
+  <div id="page-container">
+    <div id="hero_image">
+      <ul class="nav">
+        <li><a class = "nav" href="index.html">Home</a></li>
+        <li><a class = "nav" href="abstracts.html">Abstracts</a></li>
+        <li><a class = "nav" href="books.html">Books</a></li>
+        <li><a class = "nav" href="cv.html">CV</a></li>
+        <li><a class = "nav" href="music.html">Music</a></li>
+        <li><a class = "nav" href="software.html">Software</a></li>
+        <li><a class = "nav" href="acknowledgements.html">Acknowledgements</a></li>
+      </ul>
+      <div id="hero_text">
+        <h1>Software Recommendations</h1>
+        <h2>Programmes, tools, and packages for myriad applications</h2>
+      </div>
     </div>
+    <div id="page_content">
+      <p class="introtext">Efforts have been made to limit software to free and open-source options. Some paid for options are included when no better alternative exists (to my knowledge). Subscription models are excluded entirely.</p>
+      <h3>Downloadable:</h3>
+      <ul>
+        <li><a href="https://atom.io">Atom Editor</a> - Highly modifiable text editor with full GitHub integration [Linux, Mac, Windows]</li>
+        <li><a href="https://www.audacityteam.org/">Audacity</a> - Multi-track audio editing, relatively powerful for its learning curve [Linux, Mac, Windows]</li>
+        <li><a href="https://brave.com">Brave Browser</a> - Chrome-based browser with a built-in adblocker and TOR browser [Linux, Mac, Windows]</li>
+        <li><a href="https://calibre-ebook.com">Calibre</a> - E-Book library manager, exporter, and reader [Linux, Mac, Windows]</li>
+        <li><a href="https://picotorrent.org/">Picotorrent</a> - Fast, safe, and minimal torrent client [Windows]</li>
+        <li><a href="https://equalizerapo.com/">Equalizer APO</a> - Open source audio processing software, functions as a systemwide EQ [Windows]</li>
+        <ul class="sub">
+          <li><a href="https://sourceforge.net/projects/peace-equalizer-apo-extension/">Peace Equalizer</a> - Highly recommended interface for Equalizer APO
+        </ul>
+        <li><a href="https://evince.en.softonic.com/">Evince PDF Reader</a> - Lightweight, but powerful, document viewer [Linux]</li>
+        <li><a href="https://www.gimp.org/">GIMP</a> - Vector based image manipulation software, a Photoshop alternative [Linux, Mac, Windows]</li>
+        <li><a href="https://inkscape.org/">Inkscape</a> - Vector based graphics editor, an Illustrator alternative [Linux, Mac, Windows]</li>
+        <li><a href="https://krita.org/en/">Krita</a> - Feature-heavy painting and drawing program [Linux, Mac, Windows]</li>
+        <li><a href="https://www.getmusicbee.com/">Musicbee</a> - Highly customisable music library manager, exporter, and player [Windows]</li>
+        <ul class="sub">
+          <li><a href="https://github.com/dsafa/audio-band">Audioband</a> - A taskbar-based audio controller for Spotify, iTunes, or MusicBee [Windows]</li>
+        </ul>
+        <li><a href="https://www.openshot.org/">OpenShot</a> - Powerful video editing software [Linux, Mac, Windows]</li>
+        <li><a href="https://www.scribus.net/">Scribus</a> - Desktop publishing software, an InDesign alternative [Linux, Mac, Windows]</li>
+        <li><a href="https://tiddlywiki.com/">Tiddlywiki</a> - A html based personal wikipedia tool, incredibly lightweight, and unsurpassed as a diary</li>
+        <ul class="sub">
+          <li><a href="https://github.com/Jermolene/TiddlyDesktop">TiddlyDesktop</a> - A fusion web-browser/Javascript node built in NWJS, allowing Tiddlywiki to run as a native app [Linux, Mac, Windows]</li>
+          <li><a href="https://andtidwiki.en.aptoide.com/app">AndTidWiki</a> - A standalone html viewing tool, optimised for TiddlyWiki [Android]</li>
+        </ul>
+        <li><a href="https://www.videolan.org/">VLC</a> - Powerful multimedia player [Linux, Mac, Windows]</li>
+        <li><a href="https://www.zotero.org/">Zotero</a> - Reference and journal library manager, capable of sharing libraries between devices [Linux, Mac, Windows]</li>
+      </ul>
+    </div>
+    <footer>
+      <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
+      <br/>Contact:
+      <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
+    </footer>
+  </div>
 </body>
 
 </html>
