--- a/abstracts/20_proj_gge.html
+++ b/abstracts/20_proj_gge.html
@@ -33,7 +33,7 @@
       <br/>Contact:
       <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
     </footer>
-S  </div>
+    </div>
 </body>
 
 </html>
