--- a/abstracts/24_proj_fba.html
+++ b/abstracts/24_proj_fba.html
@@ -6,40 +6,37 @@
 <meta name="viewport" content="width=device-width, initial-scale=0.5">
 <html>
 <body>
-    <div id="page-container">
-        <div id="hero_image">
-            <ul class="nav">
-                <li><a class = "nav" href="../index.html">Home</a></li>
-                <li><a class = "nav" href="../abstracts.html">Abstracts</a></li>
-                <li><a class = "nav" href="../books.html">Books</a></li>                
-                <li><a class = "nav" href="../cv.html">C.V.</a></li>
-                <li><a class = "nav" href="../music.html">Music</a></li>
-                <li><a class = "nav" href="../software.html">Software</a></li>
-                <li><a class = "nav" href="../acknowledgements.html">Acknowledgements</a></li>
-            </ul>
-        	<div id="hero_text">
-        		<h1>Fixel-based Analysis of Diffusion MRI in Focal Epilepsy: refractory vs. non-refractory</h1>
-        		<h2>Ratcliffe, de Bézenac, Biswas, Marson, and Keller, 2023</h2>
-            </div>
-        </div>
-        <div id="page_content">
-            <h3>Background</h3>
-        	<p>Coming soon.
-            </p>
-            <h3>References</h3>
-        	<ol>
-                <li>Bryant L, McKinnon ET, Taylor JA, et al. Fiber ball white matter modeling in focal epilepsy. <em>Human Brain Mapping</em> 2021;42(8):2490-2507. doi:<a href="https://onlinelibrary.wiley.com/doi/full/10.1002/hbm.25382">10.1002/hbm.25382</a></li>
-                <li>Gleichgerrcht E, Keller SS, Bryant L, et al. High b-value diffusion tractography: Abnormal axonal network organization associated with medication-refractory epilepsy. <em>NeuroImage</em> 2022;248:118866. doi:<a href="https://pubmed.ncbi.nlm.nih.gov/34974117/">10.1016/j.neuroimage.2021.118866</a></li>
-                <li>Isensee F, Schell M, Pflueger I, et al. Automated brain extraction of multisequence MRI using artificial neural networks. <em>Human Brain Mapping</em> 2019;40(17):4952-4964. doi:<a href="https://onlinelibrary.wiley.com/doi/full/10.1002/hbm.24750">10.1002/hbm.24750</a></li>
-                <li>Raffelt DA, Tournier JD, Smith RE, et al. Investigating white matter fibre density and morphology using fixel-based analysis. <em>Neuroimage</em> 2017;144(Pt A):58-73. doi:<a href="https://pubmed.ncbi.nlm.nih.gov/27639350/">10.1016/j.neuroimage.2016.09.029</a></li>
-            </ol>
-        </div>
-        <footer>
-            <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
-            <br/>Contact:
-            <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
-        </footer>
+  <div id="page-container">
+    <div id="hero_image">
+      <ul class="nav">
+        <li><a class = "nav" href="index.html">Home</a></li>
+        <li><a class = "nav" href="abstracts.html">Abstracts</a></li>
+        <li><a class = "nav" href="books.html">Books</a></li>
+        <li><a class = "nav" href="cv.html">CV</a></li>
+        <li><a class = "nav" href="music.html">Music</a></li>
+        <li><a class = "nav" href="software.html">Software</a></li>
+        <li><a class = "nav" href="acknowledgements.html">Acknowledgements</a></li>
+      </ul>
+      <div id="hero_text">
+        <h1>Individualised Fibre-Ball White Matter Imaging Analysis of Drug Resistance in Focal Epilepsy [PREPRINT]</h1>
+        <h2>Ratcliffe, Andrews, Biswas, Bonhila, Marson, and Keller, 2024</h2>
+      </div>
     </div>
+    <div id="page_content">
+      <h3>Abstract</h3>
+      <p>Objectives: The pathomechanisms underlying drug resistance in (focal) epilepsy are poorly understood, but hypothesised to be network-based in nature. Whilst several grey matter structural abnormalities have been linked to drug resistance previously, white matter biomarkers remain elusive despite an abundance of research. Two potential reasons for this disparity are: mapping and contextualising network abnormalities in the white matter is inherently more methodologically complex than in the grey matter, and somewhat relatedly, the downstream effects of white matter abnormalities may differ due to individual variability, complicating estimates of structure-function relationships. We leveraged a novel combination of diffusion weighted imaging (DWI) data acquisition and analysis to investigate individual white matter abnormalities associated with drug resistance in focal epilepsy.
+			Methods: High angular resolution fibre-ball DWI was acquired in 30 people with epilepsy (15 well-controlled, 15 drug-resistant) and 15 healthy controls at the (University of) Liverpool Magnetic Resonance Imaging Centre. We then implemented a modified version of the novel fixel-based analysis pipeline, including estimation of fibre and scalar metrics. We first assessed the utility of fibre-ball imaging data for tractography, then, following group comparisons, identified white matter abnormalities associated with drug-resistance in epilepsy, which were used to seed local and distributed networks. Finally, we compared fibre and scalar metrics in our individual patients against our control-defined normative average, across 72 TractSeg-defined tracts.
+			Results: Evidence for reductions of fibre metrics was found in the posterior of the right cingulum and the right middle longitudinal fascicle of the drug-resistant patients when compared to the controls. Similarly, abnormalities specific to the well-controlled patients were identified in the left-projecting isthmus of the corpus callosum and the left middle longitudinal fascicle. We also report scalar-metric differences alongside potential networks of drug resistance, and present individual tract-based metric profiles.
+			Significance: We first demonstrate the relationship between angular resolution and tractography performance, then further characterise the white matter abnormalities that may underlie drug-resistance networks in focal epilepsy, and expand on previous attempts to synthesise individualised quantitative DWI evaluation. This study and its associated materials demonstrate both the feasibility and value of individualised approaches in epilepsy.
+      </p>
+      <a href="">Full preprint coming soon</a>
+    </div>
+    <footer>
+      <p id="footer_text">All opinions presented are solely my own; recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
+      <br/>Contact:
+      <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
+    </footer>
+  </div>
 </body>
 
 </html>
